# smartbook

./: .gitattributes  .gitignore  .gitmessage  CMakeLists.txt  IMPLEMENTATION_STATUS.md  Makefile  README-WINDOWS.md  README.md  TESTING_GUIDE.md  audit-lists.py  build-windows.ps1  check-dependencies.ps1  check-dependencies.sh  configure_qt.sh  convert-test-tables-final.py  convert-test-tables-fixed.py  convert-test-tables-robust.py  convert-test-tables-v2.py  convert-test-tables.py  convert-to-markdown.sh  fix-asciidoc-lists.py  inspect-build.sh  install-windows.ps1  update-rtm-with-tests.py  update-rtm.py
Documentation/: Product-Concept.adoc  README-WINDOWS.adoc  README.adoc  build-inspection-guide.adoc  build-process.adoc  ddd.adoc  ddd.html  diagrams.adoc  documentation-review.adoc  form-definition-json-schema-design.adoc  glossary.adoc  hld.adoc  implementation-status.adoc  isbn-issn-lookup-options.adoc  pdf-theme.yml  phase1-implementation-guide.adoc  phase2-remote-library-integration.adoc  phase2-user-identity-and-authentication.adoc  platform-specific-considerations.adoc  qt-webengine-configuration.adoc  requirements_traceability_matrix.adoc  risk-register-and-mitigation-plan.adoc  sqlite-configuration.adoc  srs.adoc  srs.html  tdd-implementation-guide.adoc  technical-feasibility-analysis.adoc  test-plan.adoc  testing-guide.adoc  web-channel-api-specification.adoc
Documentation/dev-journal/: journal.adoc
Documentation/dev-journal/daily_entries/: 2025-12-13_security_model.adoc  2025-12-14_consent_dialog_and_test_cases.adoc  2025-12-14_creator_tool_requirements.adoc  2025-12-14_phase2_specifications.adoc  2025-12-21_phase1.4_reader_view_implementation.adoc  2025-12-21_phase1.5_content_editor_implementation.adoc
Documentation/wireframes/: creator-tool-main-interface-description.adoc
common/: CMakeLists.txt
common/include/smartbook/common/database/: CartridgeDBConnector.h  LocalDBManager.h
common/include/smartbook/common/manifest/: ManifestManager.h
common/include/smartbook/common/metadata/: MetadataExtractor.h
common/include/smartbook/common/security/: SignatureVerifier.h  TrustRegistry.h
common/include/smartbook/common/settings/: SettingsManager.h
common/include/smartbook/common/utils/: PathUtils.h  PlatformUtils.h
common/src/database/: CartridgeDBConnector.cpp  LocalDBManager.cpp
common/src/manifest/: ManifestManager.cpp
common/src/metadata/: MetadataExtractor.cpp
common/src/security/: SignatureVerifier.cpp  TrustRegistry.cpp
common/src/settings/: SettingsManager.cpp
common/src/utils/: PathUtils.cpp  PlatformUtils.cpp
creator/: CMakeLists.txt
creator/include/smartbook/creator/: CartridgeExporter.h  CertificateManager.h  ContentEditor.h  CreatorMainWindow.h  FormBuilder.h  FormManager.h  MetadataEditor.h  PageManager.h  ResourceManager.h
creator/include/smartbook/creator/ui/: CertificateManagerDialog.h  ContentEditorView.h  FormBuilderDialog.h  MainWindow.h  PageListView.h
creator/src/: CartridgeExporter.cpp  CertificateManager.cpp  ContentEditor.cpp  CreatorMainWindow.cpp  FormBuilder.cpp  FormManager.cpp  MetadataEditor.cpp  PageManager.cpp  ResourceManager.cpp  main.cpp
creator/src/ui/: CertificateManagerDialog.cpp  FormBuilderDialog.cpp  PageListView.cpp
reader/: CMakeLists.txt
reader/include/smartbook/reader/: LibraryManager.h  ReaderViewWindow.h  WebChannelBridge.h
reader/include/smartbook/reader/ui/: ConsentDialog.h  LibraryView.h  ReaderView.h
reader/src/: LibraryManager.cpp  ReaderViewWindow.cpp  WebChannelBridge.cpp  main.cpp
reader/src/ui/: ConsentDialog.cpp  LibraryView.cpp  ReaderView.cpp
test/: CMakeLists.txt
test/unit/: test_cartridgedbconnector.cpp  test_cartridgedbconnector_errors.cpp  test_contenteditor.cpp  test_contenteditor_form_integration.cpp  test_contenteditor_pagemanager_integration.cpp  test_database_errors.cpp  test_formbuilder.cpp  test_helpers.cpp  test_helpers.h  test_librarymanager_performance.cpp  test_libraryview_dualview.cpp  test_localdbmanager.cpp  test_manifestmanager.cpp  test_manifestmanager_deletion.cpp  test_manifestmanager_errors.cpp  test_manifestmanager_performance.cpp  test_manifestmanager_update.cpp  test_pagemanager.cpp  test_readerview_content.cpp  test_settings_manager.cpp  test_signatureverifier.cpp  test_signatureverifier_l2l3.cpp  test_signatureverifier_tampering.cpp  test_trustregistry.cpp
